@@ -185,6 +185,7 @@ ACX_PROG_CMP_IGNORE_INITIAL
 
 AC_SUBST(HDEFINES)
 AC_SUBST(HOSTING_CRT0)
+AC_SUBST(HOSTING_SCRT0)
 AC_SUBST(HOSTING_LIBS)
 AC_SUBST(NATIVE_LIB_DIRS)
 
