@@ -1,3 +1,14 @@
+2013-01-19  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* Makefile.am (HOSTING_SCRT0): New.
+
+	* configure.host (HOSTING_SCRT0): New.  Used for PIE.
+
+	* configure.in (HOSTING_SCRT0): New AC_SUBST.
+
+	* Makefile.in: Regenerated.
+	* configure: Likewise.
+
 2013-01-18  Mike Frysinger  <vapier@gentoo.org>
 
 	* NEWS: Mention change in behavior with --enable-new-dtags.
